--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 <body>
     <table class="calculadora">
     <tr>
-        <td colspan="4"><input type="text" id="result" readonly></span> </td>
+        <td colspan="4"><input type="text" id="resultado" readonly></span> </td>
     </tr>  
     <tr>
-        <td><button id="siete" onclick="insert('7')">7</button></td>
-        <td><button id="ocho" onclick="insert('8')">8</button></td>
-        <td><button id="nueve" onclick="insert('9')">9</button></td>
-        <td><button id="division" onclick="operation('/')">/</button></td>
+        <td><button id="siete" onclick="insertar('7')">7</button></td>
+        <td><button id="ocho" onclick="insertar('8')">8</button></td>
+        <td><button id="nueve" onclick="insertar('9')">9</button></td>
+        <td><button id="division" onclick="operacion('/')">/</button></td>
     </tr> 
     <tr>
-        <td><button id="cuatro" onclick="insert('4')">4</button></td>
-        <td><button id="cinco" onclick="insert('5')">5</button></td>
-        <td><button id="seis"  onclick="insert('6')">6</button></td>
-        <td><button id="multiplicacion" onclick="operation('*')">*</button></td>
+        <td><button id="cuatro" onclick="insertar('4')">4</button></td>
+        <td><button id="cinco" onclick="insertar('5')">5</button></td>
+        <td><button id="seis"  onclick="insertar('6')">6</button></td>
+        <td><button id="multiplicacion" onclick="operacion('*')">*</button></td>
     </tr> 
     <tr>
-        <td><button id="uno"  onclick="insert('1')">1</button></td>
-        <td><button id="dos" onclick="insert('2')">2</button></td>
-        <td><button id="tres" onclick="insert('3')">3</button></td>
-        <td><button id="Resta" onclick="operation('-')">-</button></td>
+        <td><button id="uno"  onclick="insertar('1')">1</button></td>
+        <td><button id="dos" onclick="insertar('2')">2</button></td>
+        <td><button id="tres" onclick="insertar('3')">3</button></td>
+        <td><button id="Resta" onclick="operacion('-')">-</button></td>
     </tr> 
     <tr>
-        <td><button id="igual" onclick="equal()">=</button></td>
-        <td><button id="Reset" onclick="clearResult()">C</button></td>
-        <td><button id="Cero" onclick="insert('0')">0</button></td>
-        <td><button id="Suma" onclick="operation('+')">+</button></td>
+        <td><button id="igual" onclick="igual()">=</button></td>
+        <td><button id="Reset" onclick="clearResultado()">C</button></td>
+        <td><button id="Cero" onclick="insertar('0')">0</button></td>
+        <td><button id="Suma" onclick="operacion('+')">+</button></td>
     </tr> 
     </table>
 <script src="funcionflecha.js"></script>    
